force-app/main/default/objects/Opportunity/fields/XUM_ApprovalRequestDateTime__c.field-meta.xml
<CustomField>
    <fullName>XUM_ApprovalRequestDateTime__c</fullName>
    <label>Approval Request Date Time</label>
    <type>DateTime</type>
</CustomField>