force-app/main/default/objects/Opportunity/fields/XUM_ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>XUM_ApprovalStatus__c</fullName>
    <description>Estatus de la aprobación</description>
    <label>Estatus Aprobación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Enviada</fullName>
                <default>true</default>
                <label>No Enviada</label>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>