force-app/main/default/objects/Opportunity/fields/XUM_CardLast4Digits__c.field-meta.xml
<CustomField>
    <fullName>XUM_CardLast4Digits__c</fullName>
    <inlineHelpText>Ultimos 4 digitos de la tarjeta</inlineHelpText>
    <label>Ultimos 4 Digitos</label>
    <length>4</length>
    <type>Text</type>
</CustomField>