force-app/main/default/objects/Opportunity/fields/XUM_CardLast4Digitsobs__c.field-meta.xml
<CustomField>
    <fullName>XUM_CardLast4Digitsobs__c</fullName>
    <inlineHelpText>Ultimos 4 digitos de la tarjeta</inlineHelpText>
    <label>obs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>