force-app/main/default/objects/Opportunity/fields/XUM_MaxLimitAmount__c.field-meta.xml
<CustomField>
    <fullName>XUM_MaxLimitAmount__c</fullName>
    <inlineHelpText>Refleja la solicitud del cliente</inlineHelpText>
    <label>Límite Monto Máximo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>