force-app/main/default/objects/Opportunity/fields/XUM_RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>XUM_RecordTypeName__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>