force-app/main/default/objects/Opportunity/fields/XUM_RecordTypeNameOBS__c.field-meta.xml
<CustomField>
    <fullName>XUM_RecordTypeNameOBS__c</fullName>
    <label>OBS</label>
    <length>200</length>
    <type>Text</type>
</CustomField>