force-app/main/default/objects/Opportunity/recordTypes/Creditos_Personales.recordType-meta.xml
<RecordType>
    <fullName>Creditos_Personales</fullName>
    <label>Créditos Personales</label>
    <active>true</active>
    <businessProcess>Creditos_Personales</businessProcess>
    <description>Oportunidades para Créditos Personales</description>
</RecordType>