force-app/main/default/objects/Opportunity/recordTypes/Tarjetas.recordType-meta.xml
<RecordType>
    <fullName>Tarjetas</fullName>
    <active>true</active>
    <businessProcess>Tarjetas</businessProcess>
    <description>Tipos de Oportunidades para gestionar la venta de tarjetas</description>
    <label>Tarjetas</label>
</RecordType>