force-app/main/default/objects/Opportunity/listViews/Creditos_Personales_Todas.listView-meta.xml
<ListView>
    <fullName>Creditos_Personales_Todas</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>XUM_RecordTypeNameOBS__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>XUM_RecordTypeName__c</field>
        <operation>equals</operation>
        <value>Creditos_Personales</value>
    </filters>
    <label>Creditos Personales - Todas</label>
</ListView>