force-app/main/default/objects/Opportunity/listViews/Tarjetas_Todas.listView-meta.xml
<ListView>
    <fullName>Tarjetas_Todas</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>XUM_RecordTypeName__c</field>
        <operation>equals</operation>
        <value>Tarjetas</value>
    </filters>
    <label>Tarjetas - Todas</label>
</ListView>